# kwin-effect-spotlight

./: CMakeLists.txt  README.md  Screencast.webm
src/: CMakeLists.txt  main.cpp  metadata.json  spotlight.cpp  spotlight.h  spotlight_config.cpp  spotlight_config.h  spotlight_config.ui  spotlightconfig.kcfg  spotlightconfig.kcfgc
